[gd_scene load_steps=31 format=2]

[ext_resource path="res://Player/Player_script.gd" type="Script" id=1]
[ext_resource path="res://sprites/player_sprite.png" type="Texture" id=2]
[ext_resource path="res://sprites/attacksprite.png" type="Texture" id=3]
[ext_resource path="res://sprites/attack_frame3.png" type="Texture" id=4]
[ext_resource path="res://sprites/attack_frame2.png" type="Texture" id=5]
[ext_resource path="res://sprites/attack_frame1.png" type="Texture" id=6]
[ext_resource path="res://sprites/attack_frame0.png" type="Texture" id=7]
[ext_resource path="res://sprites/whole8frameswhadduyaknow.png" type="Texture" id=8]
[ext_resource path="res://sprites/watch_sprites.png" type="Texture" id=9]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.64275, 9.74443 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "attack",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="UI" parent="." instance=ExtResource( 10 )]
pause_mode = 2

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_speed = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.184021, -0.184029 )
shape = SubResource( 1 )

[node name="damageZone" type="Area2D" parent="."]
scale = Vector2( 0.565, 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="damageZone"]
position = Vector2( 2.88502, 6.82376e-06 )
rotation = 1.5708
scale = Vector2( 2.75723, 1.63555 )
polygon = PoolVector2Array( 0, 0.759713, 12.0544, -24.5806, 10.8489, -28.6774, 8.83986, -30.7258, 6.8308, -32.0914, 4.01812, -33.457, -8.60624e-07, -33.457, -4.01812, -33.457, -6.8308, -32.0914, -8.83986, -30.7258, -10.8489, -28.6774, -12.0544, -24.5806 )

[node name="attackZoneSprite" type="Sprite" parent="damageZone"]
visible = false
position = Vector2( 34, 0 )
rotation = 1.5708
texture = ExtResource( 3 )

[node name="attackAnim" type="AnimatedSprite" parent="damageZone"]
position = Vector2( 28.8713, 2.12929e-07 )
rotation = 1.5708
scale = Vector2( 1, 1.30445 )
frames = SubResource( 2 )
animation = "attack"
frame = 2
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
frame = 2
playing = true

[node name="move_direction" type="Position2D" parent="."]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( -20, -32 )
scale = Vector2( 0.725586, 0.725586 )
frames = SubResource( 20 )
frame = 1
playing = true

[node name="Timers" type="Node" parent="."]

[node name="timeDepleting" type="Timer" parent="Timers"]
autostart = true
[connection signal="animation_finished" from="damageZone/attackAnim" to="." method="_on_attackAnim_animation_finished"]
[connection signal="timeout" from="Timers/timeDepleting" to="." method="_on_timeDepleting_timeout"]
